# lacoro-2024-ros-workshop

./: .gitignore  .repos  Containerfile  README.md  build.sh  local.yml  run.sh  setup.sh  workshop.def
.github/workflows/: deploy.yml
docs/: fundamentals.md  index.md  package-lock.json  welcome.md
docs/.vitepress/: config.mts
docs/instructors/: environment.md
docs/session-1/: warm-up.md
lsc/: CMakeLists.txt  package.xml
lsc_bringup/: CMakeLists.txt  package.xml
lsc_bringup/launch/: robot.launch.py
lsc_intro/: package.xml  setup.cfg  setup.py
lsc_intro/lsc_intro/: detection.py  image.py  simple_proc.py
tasks/: env.yml  rosdep.yml  tooling.yml  vcs.yml
